--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,7 @@
                         <a class="nav-link" href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
+
                 </ul>
                 <span class="navbar-text text-muted">
                     adventures of a software developer
@@ -56,7 +57,6 @@
             </div>
         </div>
     </nav>
-
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
@@ -71,6 +71,7 @@
     </div>
 
     <main class="flex-shrink-0 main-bg">
+
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
@@ -86,10 +87,10 @@
     </footer>
     <script>
         setTimeout(function () {
-            let messages = document.getElementById("msg");
+            let messages = document.getElementById('msg');
             let alert = new bootstrap.Alert(messages);
             alert.close();
-        }, 3000);
+        }, 2000);
     </script>
 </body>
 
